--- a/index3.html
+++ b/index3.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8"/>
-    <title>javascript</title>
+    <title>サンプルページ</title>
+    <meta name="viewport" content="width=device-witdh" >
     <link rel="stylesheet" type="text/css" href="static/sheet3.css">
 
     
@@ -36,6 +37,15 @@
             <li><a href="#">食べ物</a></li>
             <li><a href="#">お問い合わせ</a></li>
         </ul>
+    </div>
+
+    <div class="copyright">
+        <p>
+            TimeSwitchは毎日の生活で気になることを書き溜めているブログです
+        </p>
+        <p>
+            Copyright &copy; TimeSwitch
+        </p>
     </div>
 
     <!----<script type="text/javascript" src="scripts/script008.js"></script>--->
