--- a/index4.html
+++ b/index4.html
@@ -3,20 +3,83 @@
 <head>
     <meta charset="UTF-8"/>
     <title>サンプルページ</title>
-    <meta name="viewport" content="width=device-witdh" >
+    <meta name="viewport" content="width=device-width" >
     <link rel="stylesheet" type="text/css" href="static/sheet4.css">
 
     
 </head>
 
 <body>
-    <div class="box1">BOX1</div>
-    <div class="box2">BOX2</div>
-    <div class="boxA">
-        <div class="box3">BOX3</div>
-        <div class="box4">BOX4</div>
+    <div class="box1">
+        <div class="site">
+                <h1><a href="#">TimeSwitch</a></h1>
+        </div>
     </div>
-    <div class="box5">BOX5</div>
+    <div class="box2">
+        <nav class="menu">
+            <ul>
+                <li><a href="#">トップ</a></li>
+                <li><a href="#">雑貨</a></li>
+                <li><a href="#">ガジェット</a></li>
+                <li><a href="#">お出かけ</a></li>
+                <li><a href="#">食べ物</a></li>
+                <li><a href="#">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="boxA">
+        <div class="box3">
+            <article class="kiji">
+                <h1>もぎたてトマトを美味しく食べたい！</h1>
+                <p><img src="image/tomato.jpg" alt=""></p>
+                <p>
+                    もぎたてのトマトを食べたくなって、ちょっと郊外にあるトマト農家さんの直売所まで行ってきました
+                    ここのトマトは新鮮で、美味しくて、安いという、とってもお買い得なトマトなんです。
+                </p>
+                <p>
+                    なんといっても、もぎたてトマトは水洗いしてそのまま食べるのが一番です。
+                    暑い日に美味しいトマトにかぶりつくと、それだけで幸せになれます。
+                    水分補給もできるので一石二鳥です。
+                </p>
+            </article>
+        </div>
+        <div class="box4">
+            <div class="box4-1">
+                <aside class="sidemenu">
+                    <h1>特集記事</h1>
+                    <ul>
+                        <li><a href="#">わかりやすい地図の読み方</a></li>
+                        <li><a href="#">苗から始めるトマト作り</a></li>
+                        <li><a href="#">料理とスマホの便利な関係</a></li>
+                        <li><a href="#">バッテリーを長持ちさせる技</a></li>
+                    </ul>
+                </aside>
+                <aside class="osusume">
+                        <h1>おすすめ記事</h1>
+                        <ul>
+                            <li><a href="#">初めてのフラワーアレンジメント</a></li>
+                            <li><a href="#">古い端末から出てきたので充電してみたら</a></li>
+                        </ul>
+                </aside>
+            </div>
+            <div class="box4-2">
+                <aside class="ninki">
+                        <h1>人気の記事</h1>
+                        <ul>
+                            <li><a href="#">お花済みにおすすめの鑑賞スポット</a></li>
+                            <li><a href="#">通話アプリの便利な使い方</a></li>
+                            <li><a href="#">森林浴＆温泉を満喫するならココ</a></li>
+                            <li><a href="#">世界各地の買い物袋</a></li>
+                        </ul>
+                </aside>
+            </div>
+        </div>
+    </div>
+    <div class="box5">
+        <div class="copyright">
+            <p>Copyright &copy; TimeSwitch</p>
+        </div>
+    </div>
 
 
 
