--- a/index4.html
+++ b/index4.html
@@ -55,6 +55,23 @@
                     暑い日に美味しいトマトにかぶりつくと、それだけで幸せになれます。
                     水分補給もできるので一石二鳥です。
                 </p>
+                <div class="share">
+                    <ul>
+                        <li><a href="#" class="share-tw">
+                            <i class="fa fa-twitter"></i>
+                            <span>Twitter</span>でシェア
+                        </a></li>
+                        <li><a href="#" class="share-fb">
+                            <i class="fa fa-facebook"></i>
+                            <span>Facebook</span>でシェア
+                        </a></li>
+                        <li><a href="#" class="share-gp">
+                            <i class="fa fa-google-plus"></i>
+                            <span>Google+</span>でシェア
+                        </a></li>
+                        
+                    </ul>
+                </div>
             </article>
         </div>
         <div class="box4">
@@ -80,8 +97,18 @@
                 <aside class="osusume">
                         <h1>おすすめ記事</h1>
                         <ul>
-                            <li><a href="#">初めてのフラワーアレンジメント</a></li>
-                            <li><a href="#">古い端末から出てきたので充電してみたら</a></li>
+                            <li><a href="#">
+                                <img src="image/flower001.jpg" alt="">
+                                <div class="text">
+                                初めてのフラワーアレンジメント
+                                </div>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="image/flower002.jpg" alt="">
+                                <div class="text">
+                                古い端末から出てきたので充電してみたら
+                                </div>
+                            </a></li>
                         </ul>
                 </aside>
             </div>
@@ -89,9 +116,27 @@
                 <aside class="ninki">
                         <h1>人気の記事</h1>
                         <ul>
-                            <li><a href="#">お花済みにおすすめの鑑賞スポット</a></li>
-                            <li><a href="#">通話アプリの便利な使い方</a></li>
-                            <li><a href="#">森林浴＆温泉を満喫するならココ</a></li>
+                            <li><a href="#">
+                                <img src="image/car.png" alt="">
+                                <div class="text">
+                                お花済みにおすすめの鑑賞スポット
+                                <span>おでかけ</span>
+                                </div>
+                            </a></li>
+                            <li><a href="#">
+                                    <img src="image/tatsu.png" alt="">
+                                    <div class="text">
+                                    通話アプリの便利な使い方
+                                    <span>スマホ＆タブレット</span>
+                                </div>
+                            </a></li>
+                            <li><a href="#">
+                                    <img src="image/fish.png" alt="">
+                                    <div class="text">
+                                    森林浴＆温泉を満喫するならココ
+                                    <span>おでかけ</span>
+                                </div>
+                            </a></li>
                             <li><a href="#">世界各地の買い物袋</a></li>
                         </ul>
                 </aside>
@@ -106,6 +151,6 @@
 
 
 
-    <!----<script type="text/javascript" src="scripts/script008.js"></script>--->
+    <!--<script type="text/javascript" src="scripts/script009.js"></script>-->
 </body>
 </html>
